--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "BSD-3-Clauses",
+  "license": "BSD-3-Clause",
   "dependencies": {
     "axios": "^1.3.4",
     "commander": "^10.0.0",
