--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "author": "",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "axios": "^1.3.4",
-    "commander": "^10.0.0",
-    "icqq": "^0.0.33",
-    "oicq": "^2.3.1"
+    "axios": "^1.4.0",
+    "commander": "^10.0.1",
+    "icqq": "0.3.14"
   }
 }
